# programming_technology

./: .travis.yml  CMakeLists.txt  README.md  backup.sh  config.ini  docker-compose.yml  encryptor.py  install.sh  mailu.env  main.py  script.sh  stress_test.py  train.py  unit_test.py
A/: preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
test_files/: ans.txt  big_text.txt  russian_text.txt  small_text.txt
